--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -16,22 +16,23 @@ h1 {
   height: 100%;
   display: flex;
 
-  > div {
-    flex: 3 0 0;
-  }
-
-  > .controls {
+  .data-display {
+    padding: 10px 10px;
     flex: 1 0 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
-    > .layers {
+    .layers {
       flex: 1 0 0;
       display: flex;
 
       .layer-control {
         flex: 1 0 0;
+
+        .layer {
+          padding: 10px 0;
+        }
 
         .layer-slider {
           display: flex;
@@ -45,8 +46,4 @@ h1 {
       cursor: pointer;
     }
   }
-}
-
-.layer {
-  padding: 10px 10px;
 }
