Some more progress on layer reordering

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -72,6 +72,15 @@ h1 {
 
 .map {
   user-select: none;
+  position: relative;
+}
+
+.layers-order {
+  position: absolute;
+  background-color: #fff;
+  top: 10px;
+  right: 10px;
+  z-index: 99;
 }
 
 svg > text {
