Add padding to global lock

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -90,6 +90,10 @@ h1 {
     display: inline-block;
 }
 
+.layers-order .lock-all {
+  padding-left: 1rem;
+}
+
 .layers-order .list-item {
   padding: .25rem;
 }
